<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTracking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">User:</string>
    <string name="role">Role:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="unknown">unknown</string>
    <string name="track">Track</string>
    <string name="publish">Publish</string>
    
    <string-array name="roles">
        <item>Role1</item>
        <item>Role2</item>
        <item>Role3</item>
    </string-array>

</resources>
