<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".PublisherActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       	<TextView 
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="Server:"/> 
       	<EditText 
       	    android:id="@+id/server"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="192.168.1.135" 
       	    android:hint="192.168.1.135"/> 

    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       	<TextView 
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="Port:"/> 
       	<EditText 
       	    android:id="@+id/port"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="61613" 
       	    android:hint="61613"/> 

    </LinearLayout>
    <Button 
        android:id="@+id/connectButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Connect"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       	<TextView 
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/user"/> 
       	<EditText 
       	    android:id="@+id/user"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:inputType="text"
       	    android:hint="User"/>

    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       	<TextView 
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/role"/> 
       	<Spinner 
       	    android:id="@+id/role"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"/> 

    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       	<TextView 
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/latitude"/> 
       	<TextView 
       	    android:id="@+id/latitude"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/unknown"/> 

    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       	<TextView 
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/longitude"/> 
       	<TextView 
       	    android:id="@+id/longitude"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/unknown"/> 

    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       	<Button 
       	    android:id="@+id/trackButton"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:text="@string/track"/> 
       	<Button 
       	    android:id="@+id/publishButton"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:text="@string/publish"/> 

    </LinearLayout>

</LinearLayout>
